<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/LemonChiffon"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/calculate_your"
        android:textAllCaps="true"
        android:textColor="@color/FireBrick"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/age"
        android:textAllCaps="true"
        android:textColor="@color/MidnightBlue"
        android:background="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/in_minutes_seconds"
        android:textAllCaps="true"
        android:textColor="@color/maroon"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/select_your_birth_date"
        android:textSize="20sp"
        android:background="#FFFFFF"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/selected_date"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/ageOutputInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textColor="@color/Black"
        android:background="@color/LemonChiffon"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/age_in_minutes"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:textStyle="italic" />


</LinearLayout>